# law-assistant

./: Makefile  README.md  main.py  pyproject.toml
.systemd/: law-assistant-backend.service  law-assistant-frontend.service
app/: __init__.py
backend/: .env  .env.example  law_assistant.db  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: ask.py  notes.py
backend/app/db/: init_db.py  session.py
backend/app/models/: note.py
backend/app/rag/: __init__.py  embedding.py  ingest.py  retriever.py
backend/app/schemas/: ask.py  notes.py
backend/app/services/: llm_service.py  note_service.py
backend/data/chroma/: chroma.sqlite3
backend/tests/: test_ask_schema_and_llm_service.py  test_notes_schema_and_service.py
data/laws/: sample_contract_law.txt
deploy/systemd/: law-assistant-backend.service.template  law-assistant-frontend.service.template
docs/api/: 2026-04-10-llm-integration-api.md
docs/deployment/: 2026-04-14-vercel-deployment.md
docs/superpowers/plans/: 2026-04-03-homepage-background-implementation.md  2026-04-05-note-classification-search-implementation.md  2026-04-05-review-reminder-progress-implementation.md  2026-04-07-learning-workbench-page-implementation.md  2026-04-08-ai-legal-learning-workspace-implementation.md  2026-04-08-homepage-mist-ai-workbench-implementation-plan.md  2026-04-08-marketing-homepage-learning-capsule-implementation-plan.md  (+3 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: style.css
scripts/: render_systemd.sh
(+75 files in other folders)
