[project]
name = "law-assistant"
version = "0.1.0"
description = "AI legal learning workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy==2.0.43",
    "pydantic==2.11.7",
    "httpx==0.28.1",
    "chromadb==1.1.1",
]
